set(INCLUDES
    ${CMAKE_CURRENT_SOURCE_DIR}/AudioDefs.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Audio.h
    ${CMAKE_CURRENT_SOURCE_DIR}/BufferedSoundStream.h
    ${CMAKE_CURRENT_SOURCE_DIR}/OggVorbisSoundStream.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Sound.h
    ${CMAKE_CURRENT_SOURCE_DIR}/SoundListener.h
    ${CMAKE_CURRENT_SOURCE_DIR}/SoundSource3D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/SoundSource.h
    ${CMAKE_CURRENT_SOURCE_DIR}/SoundStream.h
)
set(SOURCE
    ${CMAKE_CURRENT_SOURCE_DIR}/Audio.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/BufferedSoundStream.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/OggVorbisSoundStream.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Sound.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/SoundListener.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/SoundSource3D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/SoundSource.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/SoundStream.cpp
)

install(FILES ${INCLUDES} DESTINATION include/Lutefisk3D/Audio )
set(Lutefisk3D_LINK_LIBRARIES ${Lutefisk3D_LINK_LIBRARIES} OpenAL STB PARENT_SCOPE)
set(Lutefisk3D_COMPONENT_SOURCES ${Lutefisk3D_COMPONENT_SOURCES} ${SOURCE} ${INCLUDES} PARENT_SCOPE)

if(UNIT_TESTING)
endif()

