set(INCLUDES
    ${CMAKE_CURRENT_SOURCE_DIR}/Allocator.h
    ${CMAKE_CURRENT_SOURCE_DIR}/ArrayPtr.h
    ${CMAKE_CURRENT_SOURCE_DIR}/DataHandle.h
    ${CMAKE_CURRENT_SOURCE_DIR}/HandleManager.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Hash.h
    ${CMAKE_CURRENT_SOURCE_DIR}/HashMap.h
    ${CMAKE_CURRENT_SOURCE_DIR}/HashTable.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Ptr.h
    ${CMAKE_CURRENT_SOURCE_DIR}/RefCounted.h
    ${CMAKE_CURRENT_SOURCE_DIR}/SmallOrig.h
    ${CMAKE_CURRENT_SOURCE_DIR}/SmallVector.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Str.h
    ${CMAKE_CURRENT_SOURCE_DIR}/sherwood_map.hpp
)
set(SOURCE
    ${CMAKE_CURRENT_SOURCE_DIR}/Allocator.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/RefCounted.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Str.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/sherwood_map.cpp
)

#set(Lutefisk3D_LINK_LIBRARIES ${Lutefisk3D_LINK_LIBRARIES} SDL2_LIB STB PARENT_SCOPE)
set(Lutefisk3D_COMPONENT_SOURCES ${Lutefisk3D_COMPONENT_SOURCES} ${SOURCE} ${INCLUDES} PARENT_SCOPE)

install(FILES ${INCLUDES} DESTINATION include/Lutefisk3D/Container )
