set(INCLUDES
    AnimatedModel.h
    AnimationController.h
    Animation.h
    AnimationState.h
    Batch.h
    BillboardSet.h
    Camera.h
    ConstantBuffer.cpp
    ConstantBuffer.h
    CustomGeometry.h
    DebugRenderer.h
    DecalSet.h
    DrawableEvents.h
    Drawable.h
    Geometry.h
    GPUObject.h
    GraphicsDefs.h
    GraphicsEvents.h
    Graphics.h
    GraphicsImpl.h
    IndexBuffer.h
    Light.h
    Material.h
    Model.h
    OcclusionBuffer.h
    Octree.h
    OctreeQuery.h
    ParticleEffect.h
    ParticleEmitter.h
    RibbonTrail.h
    Renderer.h
    RenderPath.h
    RenderSurface.h
    Shader.h
    ShaderPrecache.h
    ShaderProgram.h
    ShaderVariation.h
    Skeleton.h
    Skybox.h
    StaticModelGroup.h
    StaticModel.h
    Tangent.h
    Technique.h
    Terrain.h
    TerrainPatch.h
    Texture2D.h
    Texture2DArray.h
    Texture3D.h
    TextureCube.h
    Texture.h
    VertexBuffer.h
    VertexDeclaration.h
    View.h
    Viewport.h
    Zone.h
)
set(SOURCE
    AnimatedModel.cpp
    AnimationController.cpp
    Animation.cpp
    AnimationState.cpp
    Batch.cpp
    BillboardSet.cpp
    Camera.cpp
    CustomGeometry.cpp
    DebugRenderer.cpp
    DecalSet.cpp
    Drawable.cpp
    Geometry.cpp
    GPUObject.cpp
    Graphics.cpp
    GraphicsDefs.cpp
    IndexBuffer.cpp
    Light.cpp
    Material.cpp
    Model.cpp
    OcclusionBuffer.cpp
    Octree.cpp
    OctreeQuery.cpp
    ParticleEffect.cpp
    ParticleEmitter.cpp
    Renderer.cpp
    RenderPath.cpp
    RenderSurface.cpp
    RibbonTrail.cpp
    Shader.cpp
    ShaderPrecache.cpp
    ShaderVariation.cpp
    Skeleton.cpp
    Skybox.cpp
    StaticModel.cpp
    StaticModelGroup.cpp
    Tangent.cpp
    Technique.cpp
    Terrain.cpp
    TerrainPatch.cpp
    Texture.cpp
    Texture2D.cpp
    Texture2DArray.cpp
    Texture3D.cpp
    TextureCube.cpp
    VertexBuffer.cpp
    View.cpp
    Viewport.cpp
    Zone.cpp
)
set(OPENGL2_3_RENDERER
    OpenGL/OGLGraphicsImpl.h
    OpenGL/OGLShaderProgram.h
    OpenGL/OGLConstantBuffer.cpp
    OpenGL/OGLGraphics.cpp
    OpenGL/OGLGraphicsImpl.cpp
    OpenGL/OGLIndexBuffer.cpp
    OpenGL/OGLRenderSurface.cpp
    OpenGL/OGLShaderProgram.cpp
    OpenGL/OGLShaderVariation.cpp
    OpenGL/OGLTexture2D.cpp
    OpenGL/OGLTexture2DArray.cpp
    OpenGL/OGLTexture3D.cpp
    OpenGL/OGLTexture.cpp
    OpenGL/OGLTextureCube.cpp
    OpenGL/OGLVertexBuffer.cpp
)

add_library(Lutefisk3D_Graphics STATIC ${SOURCE} ${INCLUDES} ${OPENGL2_3_RENDERER})
add_dependencies(Lutefisk3D_Graphics SDL2_LIB glbinding_LIB)
set_property(TARGET Lutefisk3D_Graphics PROPERTY INTERFACE_LINK_LIBRARIES
    SDL2_LIB glbinding_LIB
    Lutefisk3D_Core
    Lutefisk3D_Engine # for console support
)
target_include_directories(Lutefisk3D_Graphics PRIVATE $<TARGET_PROPERTY:Qt5::Core,INTERFACE_INCLUDE_DIRECTORIES>)
target_compile_definitions(Lutefisk3D_Graphics PRIVATE $<TARGET_PROPERTY:Qt5::Core,INTERFACE_COMPILE_DEFINITIONS>)
set_property(TARGET Lutefisk3D_Graphics PROPERTY POSITION_INDEPENDENT_CODE ON)

if(UNIT_TESTING)
endif()
