set(INCLUDES
    ${CMAKE_CURRENT_SOURCE_DIR}/AnimatedModel.h
    ${CMAKE_CURRENT_SOURCE_DIR}/AnimationController.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Animation.h
    ${CMAKE_CURRENT_SOURCE_DIR}/AnimationState.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Batch.h
    ${CMAKE_CURRENT_SOURCE_DIR}/BillboardSet.h
    ${CMAKE_CURRENT_SOURCE_DIR}/BiasParameters.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Camera.h
    ${CMAKE_CURRENT_SOURCE_DIR}/ConstantBuffer.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ConstantBuffer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/CustomGeometry.h
    ${CMAKE_CURRENT_SOURCE_DIR}/DebugRenderer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/DecalSet.h
    ${CMAKE_CURRENT_SOURCE_DIR}/DrawableEvents.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Drawable.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Geometry.h
    ${CMAKE_CURRENT_SOURCE_DIR}/GPUObject.h
    ${CMAKE_CURRENT_SOURCE_DIR}/GraphicsDefs.h
    ${CMAKE_CURRENT_SOURCE_DIR}/GraphicsEvents.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Graphics.h
    ${CMAKE_CURRENT_SOURCE_DIR}/GraphicsImpl.h
    ${CMAKE_CURRENT_SOURCE_DIR}/IndexBuffer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Light.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Material.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Model.h
    ${CMAKE_CURRENT_SOURCE_DIR}/OcclusionBuffer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Octree.h
    ${CMAKE_CURRENT_SOURCE_DIR}/OctreeQuery.h
    ${CMAKE_CURRENT_SOURCE_DIR}/ParticleEffect.h
    ${CMAKE_CURRENT_SOURCE_DIR}/ParticleEmitter.h
    ${CMAKE_CURRENT_SOURCE_DIR}/RibbonTrail.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Renderer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/RenderPath.h
    ${CMAKE_CURRENT_SOURCE_DIR}/RenderSurface.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Shader.h
    ${CMAKE_CURRENT_SOURCE_DIR}/ShaderPrecache.h
    ${CMAKE_CURRENT_SOURCE_DIR}/ShaderProgram.h
    ${CMAKE_CURRENT_SOURCE_DIR}/ShaderVariation.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Skeleton.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Skybox.h
    ${CMAKE_CURRENT_SOURCE_DIR}/StaticModelGroup.h
    ${CMAKE_CURRENT_SOURCE_DIR}/StaticModel.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Tangent.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Technique.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Terrain.h
    ${CMAKE_CURRENT_SOURCE_DIR}/TerrainPatch.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Texture2D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Texture2DArray.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Texture3D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/TextureCube.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Texture.h
    ${CMAKE_CURRENT_SOURCE_DIR}/VertexBuffer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/View.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Viewport.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Zone.h
)
set(SOURCE
    ${CMAKE_CURRENT_SOURCE_DIR}/AnimatedModel.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/AnimationController.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Animation.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/AnimationState.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Batch.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/BillboardSet.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Camera.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/CustomGeometry.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/DebugRenderer.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/DecalSet.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Drawable.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Geometry.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/GPUObject.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Graphics.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/GraphicsDefs.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/IndexBuffer.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Light.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Material.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Model.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/OcclusionBuffer.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Octree.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/OctreeQuery.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ParticleEffect.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ParticleEmitter.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Renderer.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/RenderPath.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/RenderSurface.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/RibbonTrail.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Shader.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ShaderPrecache.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ShaderVariation.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Skeleton.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Skybox.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/StaticModel.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/StaticModelGroup.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Tangent.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Technique.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Terrain.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/TerrainPatch.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Texture.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Texture2D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Texture2DArray.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Texture3D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/TextureCube.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VertexBuffer.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/View.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Viewport.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Zone.cpp
)
set(OPENGL2_3_RENDERER
    ${CMAKE_CURRENT_SOURCE_DIR}/OpenGL/OGLGraphicsImpl.h
    ${CMAKE_CURRENT_SOURCE_DIR}/OpenGL/OGLShaderProgram.h
    ${CMAKE_CURRENT_SOURCE_DIR}/OpenGL/OGLConstantBuffer.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/OpenGL/OGLGraphics.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/OpenGL/OGLGraphicsImpl.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/OpenGL/OGLIndexBuffer.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/OpenGL/OGLShaderProgram.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/OpenGL/OGLShaderVariation.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/OpenGL/OGLTexture2DArray.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/OpenGL/OGLTexture3D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/OpenGL/OGLTexture.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/OpenGL/OGLTextureCube.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/OpenGL/OGLVertexBuffer.cpp
)
install(FILES ${INCLUDES} DESTINATION include/Lutefisk3D/Graphics )

if(UNIT_TESTING)
endif()

set(Lutefisk3D_LINK_LIBRARIES ${Lutefisk3D_LINK_LIBRARIES} SDL2_LIB glbinding_LIB PARENT_SCOPE)
set(Lutefisk3D_COMPONENT_SOURCES ${Lutefisk3D_COMPONENT_SOURCES} ${SOURCE} ${INCLUDES} ${OPENGL2_3_RENDERER} PARENT_SCOPE)
