set(INCLUDES
    ${CMAKE_CURRENT_SOURCE_DIR}/AbstractFile.h

    ${CMAKE_CURRENT_SOURCE_DIR}/Log.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Deserializer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Serializer.h

    ${CMAKE_CURRENT_SOURCE_DIR}/Compression.h

    ${CMAKE_CURRENT_SOURCE_DIR}/File.h
    ${CMAKE_CURRENT_SOURCE_DIR}/FileSystem.h
    ${CMAKE_CURRENT_SOURCE_DIR}/FileWatcher.h
    ${CMAKE_CURRENT_SOURCE_DIR}/IOEvents.h

    ${CMAKE_CURRENT_SOURCE_DIR}/RWOpsWrapper.h
    ${CMAKE_CURRENT_SOURCE_DIR}/PackageFile.h

    ${CMAKE_CURRENT_SOURCE_DIR}/MemoryBuffer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorBuffer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/IOEvents.h
    ${CMAKE_CURRENT_SOURCE_DIR}/IODecls.h
)
set(SOURCE
    ${CMAKE_CURRENT_SOURCE_DIR}/Log.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Serializer.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Deserializer.cpp

    ${CMAKE_CURRENT_SOURCE_DIR}/Compression.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/File.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/FileSystem.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/FileWatcher.cpp

    ${CMAKE_CURRENT_SOURCE_DIR}/PackageFile.cpp

    ${CMAKE_CURRENT_SOURCE_DIR}/MemoryBuffer.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorBuffer.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/IOEvents.cpp
)

set(Lutefisk3D_LINK_LIBRARIES ${Lutefisk3D_LINK_LIBRARIES} LZ4 PARENT_SCOPE)
set(Lutefisk3D_COMPONENT_SOURCES ${Lutefisk3D_COMPONENT_SOURCES} ${SOURCE} ${INCLUDES} PARENT_SCOPE)

install(FILES ${INCLUDES} DESTINATION include/Lutefisk3D/IO )
