set(INCLUDES
    ${CMAKE_CURRENT_SOURCE_DIR}/AreaAllocator.h
    ${CMAKE_CURRENT_SOURCE_DIR}/BoundingBox.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Color.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Frustum.h
    ${CMAKE_CURRENT_SOURCE_DIR}/MathDefs.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Matrix2.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Matrix3.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Matrix3x4.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Matrix4.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Quaternion.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Plane.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Polyhedron.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Ray.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Rect.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Random.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Sphere.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Spline.h
    ${CMAKE_CURRENT_SOURCE_DIR}/StringHash.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Vector2.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Vector3.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Vector4.h
)
set(SOURCE
    ${CMAKE_CURRENT_SOURCE_DIR}/AreaAllocator.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/BoundingBox.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Color.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Frustum.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/MathDefs.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Matrix2.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Matrix3.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Matrix3x4.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Matrix4.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Quaternion.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Random.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Plane.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Polyhedron.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Rect.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Ray.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Spline.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Sphere.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/StringHash.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Vector2.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Vector3.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Vector4.cpp
)

install(FILES ${INCLUDES} DESTINATION include/Lutefisk3D/Math )

set(Lutefisk3D_COMPONENT_SOURCES ${Lutefisk3D_COMPONENT_SOURCES} ${SOURCE} ${INCLUDES} PARENT_SCOPE)
