list (APPEND BULLET_LIBRARIES BulletSoftBody)
list (APPEND BULLET_LIBRARIES BulletDynamics)
list (APPEND BULLET_LIBRARIES BulletCollision)
list (APPEND BULLET_LIBRARIES LinearMath)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Source/ThirdParty/Bullet)
set(INCLUDES
    ${CMAKE_CURRENT_SOURCE_DIR}/CollisionShape.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Constraint.h
    ${CMAKE_CURRENT_SOURCE_DIR}/PhysicsEvents.h
    ${CMAKE_CURRENT_SOURCE_DIR}/PhysicsWorld.h
    ${CMAKE_CURRENT_SOURCE_DIR}/RaycastVehicle.h
    ${CMAKE_CURRENT_SOURCE_DIR}/RigidBody.h
)
set(SOURCE
    ${CMAKE_CURRENT_SOURCE_DIR}/PhysicsUtils.h
    ${CMAKE_CURRENT_SOURCE_DIR}/CollisionShape.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Constraint.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/PhysicsWorld.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/RaycastVehicle.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/RigidBody.cpp
)
install(FILES ${INCLUDES} DESTINATION include/Lutefisk3D/Physics )

if(UNIT_TESTING)
endif()

set(Lutefisk3D_INCLUDE_DIRS ${Lutefisk3D_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR}/Source/ThirdParty/Bullet PARENT_SCOPE)

set(Lutefisk3D_LINK_LIBRARIES ${Lutefisk3D_LINK_LIBRARIES} ${BULLET_LIBRARIES} StanHull PARENT_SCOPE)
set(Lutefisk3D_COMPONENT_SOURCES ${Lutefisk3D_COMPONENT_SOURCES} ${SOURCE} ${INCLUDES} PARENT_SCOPE)
