set(INCLUDES
    ${CMAKE_CURRENT_SOURCE_DIR}/BackgroundLoader.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Image.h
    ${CMAKE_CURRENT_SOURCE_DIR}/JSONFile.h
    ${CMAKE_CURRENT_SOURCE_DIR}/JSONValue.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Resource.h
    ${CMAKE_CURRENT_SOURCE_DIR}/ResourceCache.h
    ${CMAKE_CURRENT_SOURCE_DIR}/XMLElement.h
    ${CMAKE_CURRENT_SOURCE_DIR}/XMLFile.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Localization.h
    ${CMAKE_CURRENT_SOURCE_DIR}/ResourceEvents.h
    ${CMAKE_CURRENT_SOURCE_DIR}/ResourceDecls.h
)
set(SOURCE
    ${CMAKE_CURRENT_SOURCE_DIR}/BackgroundLoader.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Decompress.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Resource.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ResourceCache.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Localization.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Image.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/JSONFile.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/JSONValue.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/PListFile.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/XMLFile.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/XMLElement.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ResourceEvents.cpp
)

install(FILES ${INCLUDES} DESTINATION include/Lutefisk3D/Resource )

set(Lutefisk3D_LINK_LIBRARIES ${Lutefisk3D_LINK_LIBRARIES} PugiXml PARENT_SCOPE)
set(Lutefisk3D_DEPENDENCIES ${Lutefisk3D_DEPENDENCIES} rapidjson PARENT_SCOPE)
set(Lutefisk3D_COMPONENT_SOURCES ${Lutefisk3D_COMPONENT_SOURCES} ${SOURCE} ${INCLUDES} PARENT_SCOPE)
